removal of base theme

--- a/web/themes/custom/fishing_with_triston/templates/page/page.html.twig
+++ b/web/themes/custom/fishing_with_triston/templates/page/page.html.twig
@@ -94,7 +94,7 @@
         <div class="main-content">
           <a id="main-content" tabindex="-1"></a>
           {{ page.hero }}
-          <div class="main-content__container container">
+          <div >
             {{ page.highlighted }}
             {{ page.breadcrumb }}
 
