--- a/web/themes/custom/fishing_with_triston/css/main.css
+++ b/web/themes/custom/fishing_with_triston/css/main.css
@@ -1,3 +1,8 @@
+body {
+    background-image: none !important;
+    background-color: none !important;
+}
+
 a {
     color: var(--color-theme-anchor);
 }
