--- a/web/themes/custom/fishing_with_triston/css/header.css
+++ b/web/themes/custom/fishing_with_triston/css/header.css
@@ -3,7 +3,7 @@
     .header-wrapper {
         width: 100%;
         display: grid;
-        grid-template-columns: auto auto;
+        grid-template-columns: 200px auto;
         gap: 40px;
     }
 
