--- a/web/themes/custom/fishing_with_triston/css/main.css
+++ b/web/themes/custom/fishing_with_triston/css/main.css
@@ -19,6 +19,12 @@ h1 {
     font-size: 56px;
 }
 
+h2 {
+    margin: 0 0 20px 0;
+    line-height: 1.2;
+    font-size: 36px;
+}
+
 img {
     max-width: 100%;
 }
