--- a/web/themes/custom/fishing_with_triston/css/vars.css
+++ b/web/themes/custom/fishing_with_triston/css/vars.css
@@ -5,6 +5,7 @@
     --color-theme-anchor: #117E9C;
     --color-theme-white: #ffffff;
     --color-theme-blue: #0E2B5D;
+    --color-theme-gray: #444447
 }
 
 :root {
