--- a/web/themes/custom/fishing_with_triston/css/location/image-carousel.css
+++ b/web/themes/custom/fishing_with_triston/css/location/image-carousel.css
@@ -166,3 +166,21 @@
 
 
 }
+
+@media screen and (max-width: 1550px) {
+    :where(.image-carousel-container) {
+        .image-carousel-wrapper {
+            grid-template-columns: 1fr;
+        }
+
+        .carousel-slides-container {
+            place-content: center;
+        }
+
+        .image-carousel-copy-container{
+            margin-top: 0;
+        }
+    }
+
+
+}
