--- a/web/themes/custom/fishing_with_triston/css/region.css
+++ b/web/themes/custom/fishing_with_triston/css/region.css
@@ -1,4 +1,12 @@
-.region {
+:where(.region) {
     max-width: var(--content-width-wide);
     margin-inline: auto;
+}
+
+
+
+@media screen and (max-width: 1450px) {
+    :where(section .region) {
+        padding-inline: 40px;
+    }
 }
