--- a/web/themes/custom/fishing_with_triston/templates/page/page.html.twig
+++ b/web/themes/custom/fishing_with_triston/templates/page/page.html.twig
@@ -46,9 +46,9 @@
  */
 #}
 
-  <a href="{{ path('entity.node.edit_form', {'node': node.id}) }}" class="node-edit-button">
+  {# <a href="{{ path('entity.node.edit_form', {'node': node.id}) }}" class="node-edit-button">
       {{ 'Edit'|t }}
-    </a>
+    </a> #}
     
 <div id="page-wrapper" class="page-wrapper">
   <div id="page">
