--- a/web/themes/custom/fishing_with_triston/css/header.css
+++ b/web/themes/custom/fishing_with_triston/css/header.css
@@ -19,7 +19,7 @@
 
     #block-fishing-with-triston-main-menu {
 
-        ul:not(.contextual-links){
+        ul:not(.contextual-links) {
             list-style: none;
             display: flex;
             flex-flow: row;
@@ -29,7 +29,7 @@
                 font-size: 24px;
                 font-weight: 600;
                 text-decoration: none;
-                
+
                 &:hover {
                     text-decoration: underline;
                 }
@@ -38,4 +38,14 @@
         }
     }
 
+}
+
+@media screen and (max-width: 900px) {
+    :where(.site-header) {
+        .main-navigation {
+            display: none;
+        }
+
+        
+    }
 }
