--- a/web/themes/custom/fishing_with_triston/css/location/location.css
+++ b/web/themes/custom/fishing_with_triston/css/location/location.css
@@ -2,4 +2,29 @@
     display: grid;
     grid-template-columns: 3fr 1fr;
     gap: 40px;
+
+     .location-address {
+        & > img {
+            max-height: 200px;
+            width: auto;
+        }
+     }
+}
+
+@media screen and (max-width: 900px) {
+    .location-description-and-address-wrapper {
+        display: flex;
+        flex-flow: column;
+        gap: 20px;
+
+        .location-description {
+            order: 2;
+        }
+
+        .location-address {
+            display: flex;
+            flex-flow: column;
+            gap: 10px;
+        }
+    }
 }
