--- a/web/themes/custom/fishing_with_triston/templates/region/region--header.html.twig
+++ b/web/themes/custom/fishing_with_triston/templates/region/region--header.html.twig
@@ -21,5 +21,10 @@
 		<div class="main-navigation">
 			{{content}}
 		</div>
+		<div class="mobile-navigation">
+			<button class="mobile-menu-button" data-role="mobileMenuButton">
+			{{  source('themes/custom/fishing_with_triston/images/mobile-menu.svg') }}
+			</button>
+		</div>
 	</div>
 </header>
