--- a/web/themes/custom/fishing_with_triston/css/region.css
+++ b/web/themes/custom/fishing_with_triston/css/region.css
@@ -10,3 +10,9 @@
         padding-inline: 40px;
     }
 }
+
+@media screen and (max-width: 500px) {
+    :where(section .region) {
+        padding-inline: var(--mobile-padding);
+    }
+}
