--- a/web/themes/custom/fishing_with_triston/templates/content/node--home-page.html.twig
+++ b/web/themes/custom/fishing_with_triston/templates/content/node--home-page.html.twig
@@ -3,6 +3,7 @@
 		<div class="home-hero-wrapper region">
 
 			<div class="home-hero-content">
+				<h1>{{node.title.value}}</h1>
 				{{ node.field_hero_copy.processed }}
 			</div>
 			<img class="hero-image home" src="{{ node.field_home_hero_image.entity.field_media_image.entity.uri.value|image_style('home_hero_focal_point') }}" alt="{{ node.field_home_hero_image.entity.field_media_image.alt }}"/>
