refactoring lures nand fish from taxonomy term to content type

--- a/web/themes/custom/fishing_with_triston/css/hero.css
+++ b/web/themes/custom/fishing_with_triston/css/hero.css
@@ -20,7 +20,7 @@
             width: 100%;
             height: 100%;
             background: RGBA(0, 0, 0, 0.1);
-            background: linear-gradient(0deg,rgba(0, 0, 0, 0.35) 0%, rgba(255, 255, 255, 0) 20%);
+            background: linear-gradient(0deg, rgba(0, 0, 0, 0.35) 0%, rgba(255, 255, 255, 0) 20%);
             z-index: 1;
         }
 
@@ -36,9 +36,11 @@
                 align-self: flex-end;
                 border-top-right-radius: 5px;
                 border-top-left-radius: 5px;
-                background: var(--color-theme-blue);
+                background-color: var(--color-theme-blue);
+                background-image: url("../images/texture.webp");
+                background-blend-mode: multiply;
 
-                & > h1 {
+                &>h1 {
                     margin-bottom: 0;
                     color: var(--color-theme-white);
                 }
@@ -48,10 +50,10 @@
     }
 }
 
-@media screen and (max-width: 900px){
+@media screen and (max-width: 900px) {
     :where(.hero) {
         .location-title {
-            & > h1 {
+            &>h1 {
                 font-size: 36px;
             }
         }
