--- a/web/themes/custom/fishing_with_triston/templates/sections/locations/recommended-lures.html.twig
+++ b/web/themes/custom/fishing_with_triston/templates/sections/locations/recommended-lures.html.twig
@@ -32,8 +32,8 @@
 								<div class="lure">
 
 									{{ renderMediaImage(lure.entity.field_lure.entity.field_lure_image, 'location_lure') }}
-									<a class="lure-name" href="{{ path('entity.taxonomy_term.canonical', {'taxonomy_term': lure.entity.field_lure.entity.id()}) }}">
-										{{ lure.entity.field_lure.entity.name.value }}
+									<a class="lure-name" href="{{ path('entity.node.canonical', {'node': lure.entity.field_lure.entity.id()}) }}">
+										{{ lure.entity.field_lure.entity.title.value }}
 									</a>
 									{{ lure.entity.field_lure_optional_copy.processed}}
 
@@ -46,8 +46,8 @@
 								<div class="lure">
 
 									{{ renderMediaImage(lure.entity.field_lure.entity.field_lure_image, 'location_lure') }}
-									<a class="lure-name" href="{{ path('entity.taxonomy_term.canonical', {'taxonomy_term': lure.entity.field_lure.entity.id()}) }}">
-										{{ lure.entity.field_lure.entity.name.value }}
+									<a class="lure-name" href="{{ path('entity.node.canonical', {'node': lure.entity.field_lure.entity.id()}) }}">
+										{{ lure.entity.field_lure.entity.title.value }}
 									</a>
 									{{ lure.entity.field_lure_optional_copy.processed}}
 
@@ -60,8 +60,8 @@
 								<div class="lure">
 
 									{{ renderMediaImage(lure.entity.field_lure.entity.field_lure_image, 'location_lure') }}
-									<a class="lure-name" href="{{ path('entity.taxonomy_term.canonical', {'taxonomy_term': lure.entity.field_lure.entity.id()}) }}">
-										{{ lure.entity.field_lure.entity.name.value }}
+									<a class="lure-name" href="{{ path('entity.node.canonical', {'node': lure.entity.field_lure.entity.id()}) }}">
+										{{ lure.entity.field_lure.entity.title.value }}
 									</a>
 									{{ lure.entity.field_lure_optional_copy.processed}}
 
