--- a/web/themes/custom/fishing_with_triston/css/main.css
+++ b/web/themes/custom/fishing_with_triston/css/main.css
@@ -25,6 +25,12 @@ h2 {
     font-size: 36px;
 }
 
+h3 {
+    margin: 0 0 10px 0;
+    line-height: 1.1;
+    font-size: 24px;
+}
+
 img {
     max-width: 100%;
 }
@@ -32,4 +38,5 @@ img {
 p {
     font-size: 18px;
     line-height: 1.5;
+    margin-top: 0;
 }
