--- a/web/themes/custom/fishing_with_triston/templates/page/page.html.twig
+++ b/web/themes/custom/fishing_with_triston/templates/page/page.html.twig
@@ -46,9 +46,9 @@
  */
 #}
 
-  {# <a href="{{ path('entity.node.edit_form', {'node': node.id}) }}" class="node-edit-button">
+  <a href="{{ path('entity.node.edit_form', {'node': node.id}) }}" class="node-edit-button">
       {{ 'Edit'|t }}
-    </a> #}
+    </a>
     
 <div id="page-wrapper" class="page-wrapper">
   <div id="page">
@@ -90,14 +90,9 @@
       </div>
     </div>
 
-    <footer class="site-footer">
-      <div class="site-footer__inner container">
-        {{ page.footer_top }}
-        {{ page.footer_bottom }}
-      </div>
-    </footer>
+{% include '@fishing_with_triston/region/footer.html.twig' %} 
 
-    <div class="overlay" data-drupal-selector="overlay"></div>
+
 
   </div>
 </div>
