lure suggestor first go and refactoring lure and species to content types

--- a/web/modules/custom/fwt_lure_suggestor/templates/block--lure-suggestor-block.html.twig
+++ b/web/modules/custom/fwt_lure_suggestor/templates/block--lure-suggestor-block.html.twig
@@ -1,6 +1,12 @@
 <section class="lure-suggestion-container">
     <div class="region">
-        {{ testMessage }}
-        {{ dump(weather) }}
+
+        <div class="recommended-lures">
+            {% for lure in lures %}
+                <div class="recommended-lure">
+                    <div><a href="{{ path('entity.node.canonical', {'node': lure.id }) }}" >{{ lure.title.value }}</a></div>
+                </div>
+            {% endfor %}
+        </div>
     </div>
 </section>
