--- a/web/themes/custom/fishing_with_triston/css/region.css
+++ b/web/themes/custom/fishing_with_triston/css/region.css
@@ -1,6 +1,10 @@
 :where(.region) {
     max-width: var(--content-width-wide);
     margin-inline: auto;
+
+    &.narrow {
+        max-width: var(--content-width-small);
+    }
 }
 
 
