--- a/web/themes/custom/fishing_with_triston/css/footer.css
+++ b/web/themes/custom/fishing_with_triston/css/footer.css
@@ -41,3 +41,13 @@
         text-align: center;
     }
 }
+
+@media screen and (max-width: 650px) {
+    :where(.site-footer) {
+        .footer-top {
+
+            display: flex;
+            flex-flow: column wrap;
+        }
+    }
+}
