--- a/web/themes/custom/fishing_with_triston/templates/region/footer.html.twig
+++ b/web/themes/custom/fishing_with_triston/templates/region/footer.html.twig
@@ -18,7 +18,7 @@
 			</div>
 
             <div class="footer-bottom">
-                <div class="copyright">Copyright &copy; {{ 'now' | date('Y') }}</div>
+                <div class="copyright">Copyright &copy; {{ 'now' | date('Y') }} Triston Sayaovang</div>
             </div>
 		</div>
 	</div>
