--- a/web/themes/custom/fishing_with_triston/templates/region/region--header.html.twig
+++ b/web/themes/custom/fishing_with_triston/templates/region/region--header.html.twig
@@ -22,10 +22,10 @@
 			{{content}}
 		</div>
 		<div class="mobile-navigation">
-			<button class="mobile-menu-button" data-role="mobileMenuButton">
+			<button class="mobile-menu-button" data-role="mobileMenuButton" aria-label="Close mobile navigation">
 			{{  source('themes/custom/fishing_with_triston/images/mobile-menu.svg') }}
 			</button>
-			<dialog data-role="mobileNavDialog">
+			<dialog data-role="mobileNavDialog" class="mobile-nav-container">
 			<button class="close-modal-button" data-role="closeModal">X</button>
 				<div class="mobile-nav-wrapper" data-role="mobileNavWrapper">
 					<nav class="mobile-nav" data-role="mobileNav">
