--- a/web/themes/custom/fishing_with_triston/templates/view/views-view-unformatted--latest-blogs--block-1.html.twig
+++ b/web/themes/custom/fishing_with_triston/templates/view/views-view-unformatted--latest-blogs--block-1.html.twig
@@ -1,4 +1,4 @@
-<div class="latest-blogs-block">
+<section class="latest-blogs-block">
 	<div class="region">
 		<div class="latest-blogs-block-title">
 			<h2>Take a look at my latest blogs!</h2>
