--- a/web/themes/custom/fishing_with_triston/css/home-hero.css
+++ b/web/themes/custom/fishing_with_triston/css/home-hero.css
@@ -8,24 +8,24 @@
         display: grid;
         grid-template-columns: 1fr auto;
         align-items: center;
+    }
 
-        .home-hero-content {
-            background: var(--color-theme-white);
-            padding: 40px;
-            margin-inline: 40px;
-            min-width: 350px;
-            position: relative;
-            z-index: 1;
-            max-width: fit-content;
-            max-height: fit-content;
-            clip-path: polygon(92% 0, 100% 15%, 100% 100%, 0 100%, 0 0);
+    .home-hero-content {
+        background: var(--color-theme-white);
+        padding: 40px;
+        margin-inline: 40px;
+        min-width: 350px;
+        position: relative;
+        z-index: 1;
+        max-width: fit-content;
+        max-height: fit-content;
+        clip-path: polygon(92% 0, 100% 15%, 100% 100%, 0 100%, 0 0);
 
-        }
+    }
 
-        .hero-image.home {
-            max-width: 650px;
-            width: 100%;
-        }
+    .hero-image.home {
+        max-width: 650px;
+        width: 100%;
     }
 }
 
@@ -34,14 +34,23 @@
         .home-hero-wrapper {
             display: flex;
             flex-flow: column;
+        }
 
-            .home-hero-content {
-                order: 2;
-                transform: translateY(-50%);
-            }
+        .home-hero-content {
+            order: 2;
+            transform: translateY(-50%);
+            min-width: unset;
+            padding: 20px;
+            margin-inline: var(--mobile-padding);
+        }
+    }
+}
 
 
-
+@media screen and (max-width: 650px) {
+    :where(.hero.home) {
+        .home-hero-content {
+            transform: translateY(-25%);
         }
     }
 }
