--- a/web/themes/custom/fishing_with_triston/css/location/image-carousel.css
+++ b/web/themes/custom/fishing_with_triston/css/location/image-carousel.css
@@ -59,7 +59,9 @@
     }
 
     .background {
-        background: var(--color-theme-blue);
+        background-color: var(--color-theme-blue);
+        background-image: url("../../images/texture.webp");
+        background-blend-mode: multiply;
         width: 100%;
         height: 85%;
         align-self: flex-end;
@@ -177,7 +179,7 @@
             place-content: center;
         }
 
-        .image-carousel-copy-container{
+        .image-carousel-copy-container {
             margin-top: 0;
         }
 
@@ -185,9 +187,10 @@
             grid-template-columns: 1fr;
             grid-template-rows: auto 100px;
 
-            & > button {
+            &>button {
                 grid-row: 2;
             }
+
             .carousel-slides-container {
                 grid-row: 1;
             }
