--- a/web/themes/custom/fishing_with_triston/css/location/recommended-lures.css
+++ b/web/themes/custom/fishing_with_triston/css/location/recommended-lures.css
@@ -11,7 +11,10 @@
         padding: 20px 10px;
         font-weight: 600;
         border: solid 1px var(--color-theme-black);
-        background: var(--color-theme-blue);
+        background-color: var(--color-theme-blue);
+
+
+
         color: var(--color-theme-white);
         min-width: 100px;
         text-align: center;
@@ -139,12 +142,12 @@
 
 @media screen and (max-width: 500px) {
     :where(.recommended-lures-container) {
-         .season-tab {
+        .season-tab {
             min-width: 50px;
-            
-            & > h3 {
+
+            &>h3 {
                 font-size: 16px;
             }
-         }
+        }
     }
 }
