--- a/web/themes/custom/fishing_with_triston/css/fonts.css
+++ b/web/themes/custom/fishing_with_triston/css/fonts.css
@@ -1,43 +1,15 @@
-    @font-face {
-        font-family: "Lexend";
-        src: local("Lexend"),
-            url("../fonts/Lexend-Regular.ttf") format("ttf");
-        font-weight: 400;
-        font-style: normal;
-    }
+@font-face {
+  font-family: "Rubik";
+  src: url("../fonts/Rubik-VariableFont_wght.ttf") format("truetype");
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
 
-    @font-face {
-        font-family: "Lexend";
-        src: local("Lexend"),
-            url("../fonts/Lexend-Light.ttf") format("ttf");
-        font-weight: 300;
-        font-style: normal;
-    }
-
-    
-    @font-face {
-        font-family: "Lexend";
-        src: local("Lexend"),
-            url("../fonts/Lexend-SemiBold.ttf") format("ttf");
-        font-weight: 500;
-        font-style: normal;
-    }
-    
-    
-    @font-face {
-        font-family: "Lexend";
-        src: local("Lexend"),
-            url("../fonts/Lexend-Bold.ttf") format("ttf");
-        font-weight: 600;
-        font-style: normal;
-    }
-
-        
-    
-    @font-face {
-        font-family: "Lexend";
-        src: local("Lexend"),
-            url("../fonts/Lexend-ExtraBold.ttf") format("ttf");
-        font-weight: 800;
-        font-style: normal;
-    }
+@font-face {
+  font-family: "Rubik";
+  src: url("../fonts/Rubik-Italic-VariableFont_wght.ttf") format("truetype");
+  font-weight: 100 900;
+  font-style: italic;
+  font-display: swap;
+}
